[gd_scene load_steps=4 format=2]

[ext_resource path="res://Leaderboard.gd" type="Script" id=1]
[ext_resource path="res://dynamicfont-sourcecode.tres" type="DynamicFont" id=2]
[ext_resource path="res://font-sourcecode-16.tres" type="DynamicFont" id=3]

[node name="MarginContainer" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 640.0
color = Color( 0.180392, 0.0235294, 0.27451, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 640.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 388.0
margin_right = 635.0
margin_bottom = 640.0
custom_constants/separation = 30
alignment = 1

[node name="Blank" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 61.0
margin_right = 247.0
margin_bottom = 102.0
custom_fonts/font = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 247.0
margin_bottom = 173.0
custom_fonts/font = ExtResource( 2 )
text = "Hauling Grass"

[node name="LeaderboardText" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 203.0
margin_right = 247.0
margin_bottom = 224.0
custom_fonts/font = ExtResource( 3 )
text = "Leaderboard"
align = 1

[node name="MenuOptions" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
visible = false
margin_top = 193.0
margin_right = 247.0
margin_bottom = 640.0
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="Level1LeaderboardButton" type="Button" parent="HBoxContainer/VBoxContainer/MenuOptions" groups=[
"LevelLeaderboardButtons",
]]
margin_top = 138.0
margin_right = 247.0
margin_bottom = 158.0
text = "Level 1 Leaderboard"

[node name="Level2LeaderboardButton" type="Button" parent="HBoxContainer/VBoxContainer/MenuOptions" groups=[
"LevelLeaderboardButtons",
]]
margin_top = 188.0
margin_right = 247.0
margin_bottom = 208.0
text = "Level 2 Leaderboard"

[node name="Level3LeaderboardButton" type="Button" parent="HBoxContainer/VBoxContainer/MenuOptions" groups=[
"LevelLeaderboardButtons",
]]
margin_top = 238.0
margin_right = 247.0
margin_bottom = 258.0
text = "Level 3 Leaderboard"

[node name="MainMenuButton" type="Button" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 288.0
margin_right = 247.0
margin_bottom = 308.0
text = "Main Menu"

[node name="LeadersDisplay" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 254.0
margin_right = 247.0
margin_bottom = 578.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/LeadersDisplay"]
margin_right = 247.0
margin_bottom = 300.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="TextEdit" parent="HBoxContainer/VBoxContainer/LeadersDisplay/HBoxContainer"]
margin_right = 79.0
margin_bottom = 300.0
rect_min_size = Vector2( 79, 300 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/background_color = Color( 0, 0, 0, 0 )
text = "Name"
readonly = true

[node name="GrassCut" type="TextEdit" parent="HBoxContainer/VBoxContainer/LeadersDisplay/HBoxContainer"]
margin_left = 83.0
margin_right = 162.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "GrassCut"
readonly = true

[node name="Time" type="TextEdit" parent="HBoxContainer/VBoxContainer/LeadersDisplay/HBoxContainer"]
margin_left = 166.0
margin_right = 247.0
margin_bottom = 300.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Time"
readonly = true

[node name="BackButton" type="Button" parent="HBoxContainer/VBoxContainer/LeadersDisplay"]
margin_top = 304.0
margin_right = 247.0
margin_bottom = 324.0
text = "Back"
[connection signal="pressed" from="HBoxContainer/VBoxContainer/MenuOptions/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/LeadersDisplay/BackButton" to="." method="_on_BackButton_pressed"]
